--- a/estilos.css
+++ b/estilos.css
@@ -39,6 +39,20 @@ header {
           flex-flow: row warp;
   -ms-flex-pack: distribute;
       justify-content: space-around;
+  background: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
+.carousel .indicators .indicator-item {
+  border-radius: 0;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+  margin: 0 15px;
+  background: #36221c;
+}
+.carousel .indicators .indicator-item.active {
+  background: #d68f48;
 }
 
 .a {
@@ -130,18 +144,9 @@ header .contenedor-texto .texto h2 {
   -webkit-transform: translate(0, 20px);
           transform: translate(0, 20px);
 }
-.main .acerca-de .texto {
-  color: #5a5a5a;
-  font-weight: 600;
-  font-size: 1em;
-  line-height: 30px;
-  width: 80%;
-  margin: 40px auto 60px auto;
-}
-.main .acerca-de .texto .titulo {
+.main .acerca-de .texto .habilidades {
   font-size: 34px;
-  line-height: 34px;
-  margin-bottom: 40px;
+  margin-top: 30px;
   font-weight: 600;
   color: #dd820d;
   text-align: center;
@@ -329,7 +334,7 @@ footer .contacto .formulario textarea:focus {
 
 footer .contacto .formulario input[type=text],
 footer .contacto .formulario input[type=email] {
-  width: 49%;
+  width: 42%;
   margin-bottom: 15px;
 }
 
@@ -338,7 +343,7 @@ footer .contacto .formulario input[type=email] {
     text-align: center;
   }
   .main .trabajos .contenedor-trabajos .trabajo {
-    width: 46%;
+    width: 100%;
   }
 }
 @media screen and (max-width: 560px) {
