--- a/estilos.css
+++ b/estilos.css
@@ -297,8 +297,8 @@ footer .redes-sociales a:hover {
 footer .redes-sociales .twitter:hover {
   background: #1da1f2;
 }
-footer .redes-sociales .facebook:hover {
-  background: #1877f2;
+footer .redes-sociales .instagram:hover {
+  background: #f2186c;
 }
 footer .redes-sociales .youtube:hover {
   background: #ff0000;
