--- a/estilos.sass
+++ b/estilos.sass
@@ -210,9 +210,9 @@ footer
 		.twitter
 			&:hover
 				background: #1da1f2
-		.facebook
+		.instagram
 			&:hover
-				background: #1877f2
+				background: #f2186c
 		.youtube
 			&:hover
 				background: #ff0000
