--- a/estilos.css
+++ b/estilos.css
@@ -147,6 +147,7 @@ header .contenedor-texto .texto h2 {
 .main .acerca-de .texto .habilidades {
   font-size: 34px;
   margin-top: 30px;
+  margin-bottom: 0;
   font-weight: 600;
   color: #dd820d;
   text-align: center;
@@ -157,7 +158,7 @@ header .contenedor-texto .texto h2 {
 }
 .main .trabajos {
   background: #f2f2f2;
-  padding: 60px 0;
+  padding: 0 0 60px 0;
 }
 .main .trabajos .contenedor {
   overflow: hidden;
@@ -165,7 +166,7 @@ header .contenedor-texto .texto h2 {
 .main .trabajos .titulo {
   font-size: 34px;
   line-height: 34px;
-  margin-bottom: 40px;
+  margin: 80px;
   font-weight: 600;
   color: #323068;
   text-align: center;
