--- a/estilos.sass
+++ b/estilos.sass
@@ -105,6 +105,7 @@ header .contenedor-texto .texto h2
 			.habilidades
 				font-size: 34px
 				margin-top: 30px
+				margin-bottom: 0
 				font-weight: 600
 				color: #dd820d
 				text-align: center
@@ -113,13 +114,13 @@ header .contenedor-texto .texto h2
 				text-decoration: underline
 	.trabajos
 		background: #f2f2f2
-		padding: 60px 0
+		padding: 0 0 60px 0
 		.contenedor
 			overflow: hidden
 		.titulo
 			font-size: 34px
 			line-height: 34px
-			margin-bottom: 40px
+			margin: 80px
 			font-weight: 600
 			color: #323068
 			text-align: center
