--- a/estilos.sass
+++ b/estilos.sass
@@ -178,7 +178,7 @@ footer
 				min-height: 100px
 				max-height: 300px
 				margin-bottom: 15px
-			.boton
+			button.boton
 				margin: auto
 				background: #3895ea
 				color: #fff
