--- a/estilos.css
+++ b/estilos.css
@@ -353,4 +353,36 @@ footer .contacto .formulario input[type=email] {
         flex-wrap: wrap;
     padding: 20px 0;
   }
+}
+.enviado {
+  text-align: center;
+  display: block;
+  position: relative;
+  left: -1000px;
+  -webkit-transition: all 1s;
+  transition: all 1s;
+}
+.enviado p {
+  color: #ffffff;
+  font-family: "open sans" sans-serif;
+  background: #12b031;
+  padding: 8px;
+  display: inline;
+  border-radius: 3px;
+}
+
+.contenedor-form {
+  overflow: hidden;
+}
+
+.fa-sun-o {
+  color: #000;
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  z-index: 1000;
+  font-size: 22px;
+}
+.fa-sun-o:hover {
+  color: #37981e;
 }/*# sourceMappingURL=estilos.css.map */
