--- a/estilos.sass
+++ b/estilos.sass
@@ -1,10 +1,14 @@
-
+:root
+	--bg-primary: #f7f7ee
+	--bg-secundary: #ece9e1
+	--bg-input: #eeece6
+	--text: #fff
 html
 	scroll-behavior: smooth
 *
 	box-sizing: border-box
 body
-	background: #fff
+	background: var(--bg-primary)
 	font-family: 'Open Sans' , Sans-Serif
 	font-size: 16px
 .contenedor
@@ -52,7 +56,7 @@ header
 		right: 0
 	a
 		text-decoration: none
-		color: #ffffff
+		color: #fff
 		border-bottom: 2px solid transparent
 		padding-bottom: 9px
 		font-size: 1em
@@ -101,6 +105,7 @@ header .contenedor-texto .texto h2
 				transition: all .4s
 				&:hover
 					transform: translate(0, 20px)
+					border: 6px solid #0000008a
 		.texto
 			.habilidades
 				font-size: 34px
@@ -113,7 +118,8 @@ header .contenedor-texto .texto h2
 				color: #3895ea
 				text-decoration: underline
 	.trabajos
-		background: #f2f2f2
+		background: var(--bg-secundary)
+		transition: background .2s
 		padding: 0 0 60px 0
 		.contenedor
 			overflow: hidden
@@ -122,7 +128,7 @@ header .contenedor-texto .texto h2
 			line-height: 34px
 			margin: 80px
 			font-weight: 600
-			color: #323068
+			color: #3895ea
 			text-align: center
 		.contenedor-trabajos
 			display: flex
@@ -159,6 +165,8 @@ header .contenedor-texto .texto h2
 footer
 	.contacto
 		padding: 60px 0
+		background: var(--bg-primary)
+		transition: background .2s
 		.titulo
 			font-size: 34px
 			line-height: 34px
@@ -189,7 +197,7 @@ footer
 				&:hover
 					background: #387bea
 	.redes-sociales
-		background: #1e2b38
+		background: #0b1824
 		padding: 60px 0
 		.contenedor
 			display: flex
@@ -224,6 +232,7 @@ footer .contacto .formulario input[type="text"],
 footer .contacto .formulario input[type="email"],
 footer .contacto .formulario textarea
 	border: 2px solid #cecece
+	background: var(--bg-input)
 	border-radius: 5px
 	padding: 15px 20px
 	font-size: 20px
@@ -278,7 +287,7 @@ footer .contacto .formulario input[type="email"]
 .contenedor-form
 	overflow: hidden
 
-.fa-sun-o
+#dark
 	color: #000
 	position: fixed
 	bottom: 10px
