--- a/estilos.css
+++ b/estilos.css
@@ -3,6 +3,8 @@
   --bg-secundary: #ece9e1;
   --bg-input: #eeece6;
   --text: #fff;
+  --text-s: #000;
+  --text-categoria: #636363;
 }
 
 html {
@@ -229,7 +231,7 @@ header .contenedor-texto .texto h2 {
 }
 .main .trabajos .contenedor-trabajos .trabajo .descripcion .categoria {
   font-size: 14px;
-  color: #636363;
+  color: var(--text-categoria);
 }
 
 footer .contacto {
@@ -331,7 +333,7 @@ footer .contacto .formulario textarea {
   border-radius: 5px;
   padding: 15px 20px;
   font-size: 20px;
-  color: #a4a4a4;
+  color: #000000;
   outline: none;
 }
 
@@ -399,4 +401,49 @@ footer .contacto .formulario input[type=email] {
 }
 #dark:hover {
   color: #37981e;
+}
+
+#info-user {
+  border-radius: 4px;
+  padding: 22px;
+  background: var(--bg-primary);
+  width: 700px;
+  max-width: 70%;
+  min-width: 250px;
+  position: fixed;
+  top: -1000px;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  z-index: 100000;
+  -webkit-transition: top 0.8s cubic-bezier(0.22, 0.61, 0.36, 1);
+  transition: top 0.8s cubic-bezier(0.22, 0.61, 0.36, 1);
+  color: var(--text-s);
+}
+#info-user div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row grap;
+          flex-flow: row grap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+#info-user div img {
+  width: 200px;
+  height: 200px;
+  border-radius: 5px;
+}
+#info-user i {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  font-size: 22px;
+  cursor: pointer;
+  color: var(--text-s);
 }/*# sourceMappingURL=estilos.css.map */
