--- a/estilos.css
+++ b/estilos.css
@@ -392,7 +392,7 @@ footer .contacto .formulario input[type=email] {
 }
 
 #dark {
-  color: #000;
+  color: var(--text-s);
   position: fixed;
   bottom: 10px;
   right: 10px;
