--- a/estilos.sass
+++ b/estilos.sass
@@ -290,7 +290,7 @@ footer .contacto .formulario input[type="email"]
 	overflow: hidden
 
 #dark
-	color: #000
+	color: var(--text-s)
 	position: fixed
 	bottom: 10px
 	right: 10px
