--- a/estilos.sass
+++ b/estilos.sass
@@ -13,6 +13,7 @@ body
 	background: var(--bg-primary)
 	font-family: 'Open Sans' , Sans-Serif
 	font-size: 16px
+	transition: background .2s
 .contenedor
 	width: 90%
 	max-width: 1000px
@@ -295,9 +296,9 @@ footer .contacto .formulario input[type="email"]
 	bottom: 10px
 	right: 10px
 	z-index: 1000
-	font-size: 22px
+	font-size: 27px
 	&:hover
-		color: #37981e
+		color: #ebcc1c
 
 #info-user
 	border-radius: 4px
