--- a/estilos.css
+++ b/estilos.css
@@ -20,6 +20,8 @@ body {
   background: var(--bg-primary);
   font-family: "Open Sans", Sans-Serif;
   font-size: 16px;
+  -webkit-transition: background 0.2s;
+  transition: background 0.2s;
 }
 
 .contenedor {
@@ -397,10 +399,10 @@ footer .contacto .formulario input[type=email] {
   bottom: 10px;
   right: 10px;
   z-index: 1000;
-  font-size: 22px;
+  font-size: 27px;
 }
 #dark:hover {
-  color: #37981e;
+  color: #ebcc1c;
 }
 
 #info-user {
