--- a/estilos.css
+++ b/estilos.css
@@ -143,7 +143,7 @@ header .contenedor-texto .texto h2 {
 .main .acerca-de .foto {
   margin-top: -60px;
 }
-.main .acerca-de .foto img {
+.main .acerca-de .foto .fede {
   vertical-align: top;
   border-radius: 50%;
   border: 6px solid rgba(255, 255, 255, 0.3);
@@ -151,7 +151,7 @@ header .contenedor-texto .texto h2 {
   -webkit-transition: all 0.4s;
   transition: all 0.4s;
 }
-.main .acerca-de .foto img:hover {
+.main .acerca-de .foto .fede:hover {
   -webkit-transform: translate(0, 20px);
           transform: translate(0, 20px);
   border: 6px solid rgba(0, 0, 0, 0.5411764706);
@@ -448,4 +448,16 @@ footer .contacto .formulario input[type=email] {
   font-size: 22px;
   cursor: pointer;
   color: var(--text-s);
+}
+
+#arrow {
+  width: 80px;
+  height: auto;
+  z-index: 1000;
+  position: absolute;
+  left: 30%;
+  -webkit-transform: translateX(-90px);
+          transform: translateX(-90px);
+  -webkit-transform: translateY(80px);
+          transform: translateY(80px);
 }/*# sourceMappingURL=estilos.css.map */
