--- a/estilos.sass
+++ b/estilos.sass
@@ -100,7 +100,7 @@ header .contenedor-texto .texto h2
 		text-align: center
 		.foto
 			margin-top: -60px
-			img
+			.fede
 				vertical-align: top
 				border-radius: 50%
 				border: 6px solid rgba(255,255,255,.3)
@@ -330,3 +330,11 @@ footer .contacto .formulario input[type="email"]
 		font-size: 22px
 		cursor: pointer
 		color: var(--text-s)
+#arrow
+	width: 80px
+	height: auto
+	z-index: 1000
+	position: absolute
+	left: 30%
+	transform: translateX(-90px)
+	transform: translateY(80px)
