--- a/estilos.sass
+++ b/estilos.sass
@@ -290,6 +290,16 @@ footer .contacto .formulario input[type="email"]
 .contenedor-form
 	overflow: hidden
 
+.fa-chevron-up
+	position: fixed
+	bottom: 50px
+	right: 10px
+	color: var(--text-s)
+	z-index: 1000
+	font-size: 27px
+	&:hover
+		color: #ebcc1c
+
 #dark
 	color: var(--text-s)
 	position: fixed
