--- a/estilos.css
+++ b/estilos.css
@@ -17,6 +17,7 @@ html {
 }
 
 body {
+  min-width: 370px;
   background: var(--bg-primary);
   font-family: "Open Sans", Sans-Serif;
   font-size: 16px;
