--- a/estilos.sass
+++ b/estilos.sass
@@ -10,6 +10,7 @@ html
 *
 	box-sizing: border-box
 body
+	min-width: 370px
 	background: var(--bg-primary)
 	font-family: 'Open Sans' , Sans-Serif
 	font-size: 16px
