--- a/estilos.css
+++ b/estilos.css
@@ -35,6 +35,7 @@ body {
 header {
   background: url(img/bg.jpg) #623f1c;
   background-repeat: no-repeat;
+  background-size: cover;
   background-position: center;
   background-attachment: fixed;
   max-height: 600px;
@@ -51,20 +52,11 @@ header {
           flex-flow: row warp;
   -ms-flex-pack: distribute;
       justify-content: space-around;
-  background: none;
+  background: rgba(0, 0, 0, 0.462745098);
+  padding: 10px 0;
+  border-radius: 4px;
   -webkit-box-shadow: none;
           box-shadow: none;
-}
-
-.carousel .indicators .indicator-item {
-  border-radius: 0;
-  -webkit-transform: rotate(45deg);
-          transform: rotate(45deg);
-  margin: 0 15px;
-  background: #36221c;
-}
-.carousel .indicators .indicator-item.active {
-  background: #d68f48;
 }
 
 .a {
@@ -78,7 +70,7 @@ header {
   position: absolute;
   bottom: -2px;
   right: 50%;
-  background: #fff;
+  background: #ebcc1c;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
 }
@@ -92,6 +84,17 @@ header {
   border-bottom: 2px solid transparent;
   padding-bottom: 9px;
   font-size: 1em;
+}
+
+.carousel .indicators .indicator-item {
+  border-radius: 0;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+  margin: 0 15px;
+  background: #36221c;
+}
+.carousel .indicators .indicator-item.active {
+  background: #d68f48;
 }
 
 .contenedor-texto {
@@ -373,23 +376,6 @@ footer .contacto .formulario input[type=email] {
     padding: 20px 0;
   }
 }
-.enviado {
-  text-align: center;
-  display: block;
-  position: relative;
-  left: -1000px;
-  -webkit-transition: all 1s;
-  transition: all 1s;
-}
-.enviado p {
-  color: #ffffff;
-  font-family: "open sans" sans-serif;
-  background: #12b031;
-  padding: 8px;
-  display: inline;
-  border-radius: 3px;
-}
-
 .contenedor-form {
   overflow: hidden;
 }
@@ -404,6 +390,7 @@ footer .contacto .formulario input[type=email] {
 }
 .fa-chevron-up:hover {
   color: #ebcc1c;
+  cursor: pointer;
 }
 
 #dark {
@@ -416,6 +403,7 @@ footer .contacto .formulario input[type=email] {
 }
 #dark:hover {
   color: #ebcc1c;
+  cursor: pointer;
 }
 
 #info-user {
@@ -461,16 +449,4 @@ footer .contacto .formulario input[type=email] {
   font-size: 22px;
   cursor: pointer;
   color: var(--text-s);
-}
-
-#arrow {
-  width: 80px;
-  height: auto;
-  z-index: 1000;
-  position: absolute;
-  left: 30%;
-  -webkit-transform: translateX(-90px);
-          transform: translateX(-90px);
-  -webkit-transform: translateY(80px);
-          transform: translateY(80px);
 }/*# sourceMappingURL=estilos.css.map */
