--- a/estilos.sass
+++ b/estilos.sass
@@ -28,7 +28,7 @@ header
 	background-attachment: fixed
 	max-height: 600px
 .menu
-	margin: 40px 0
+	z-index: 20000
 	display: flex
 	flex-flow: row warp
 	justify-content: space-around
@@ -36,6 +36,9 @@ header
 	padding: 10px 0
 	border-radius: 4px
 	box-shadow: none
+	position: fixed
+	width: 100%
+	top: 0
 
 .a
 	position: relative
