--- a/estilos.css
+++ b/estilos.css
@@ -42,7 +42,7 @@ header {
 }
 
 .menu {
-  margin: 40px 0;
+  z-index: 20000;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -57,6 +57,9 @@ header {
   border-radius: 4px;
   -webkit-box-shadow: none;
           box-shadow: none;
+  position: fixed;
+  width: 100%;
+  top: 0;
 }
 
 .a {
