--- a/estilos.sass
+++ b/estilos.sass
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital@0;1&display=swap')
 :root
 	--bg-primary: #f7f7ee
 	--bg-secundary: #ece9e1
@@ -30,11 +31,10 @@ header
 .menu
 	z-index: 20000
 	display: flex
-	flex-flow: row warp
+	flex-flow: wrap row
 	justify-content: space-around
 	background: #00000076
 	padding: 10px 0
-	border-radius: 4px
 	box-shadow: none
 	position: fixed
 	width: 100%
@@ -341,3 +341,8 @@ footer .contacto .formulario input[type="email"]
 		font-size: 22px
 		cursor: pointer
 		color: var(--text-s)
+	h3
+		font-family: 'Poppins' sans-serif
+		font-style: italic
+	p
+		font-family: 'Poppins' sans-serif
