--- a/estilos.sass
+++ b/estilos.sass
@@ -258,30 +258,6 @@ footer .contacto .formulario input[type="email"]
 	width: 42%
 	margin-bottom: 15px
 
-@media screen and (max-width: 800px)
-	header
-		.menu
-			text-align: center
-	.main
-		.trabajos
-			.contenedor-trabajos
-				.trabajo
-					width: 100%
-
-@media screen and (max-width: 560px)
-	header
-		.contenedor-texto
-			.texto
-				.nombre
-					font-size: 35px
-				.profesion
-					font-size: 18px
-	footer
-		.redes-sociales
-			.contenedor
-				flex-wrap: wrap
-				padding: 20px 0
-
 .contenedor-form
 	overflow: hidden
 
@@ -313,7 +289,6 @@ footer .contacto .formulario input[type="email"]
 	background: var(--bg-primary)
 	width: 700px
 	max-width: 70%
-	min-width: 250px
 	position: fixed
 	top: -1000px
 	left: 50%
@@ -346,3 +321,30 @@ footer .contacto .formulario input[type="email"]
 		font-style: italic
 	p
 		font-family: 'Poppins' sans-serif
+
+@media screen and (max-width: 800px)
+	header
+		.menu
+			text-align: center
+	.main
+		.trabajos
+			.contenedor-trabajos
+				.trabajo
+					width: 100%
+
+@media screen and (max-width: 560px)
+	header
+		.contenedor-texto
+			.texto
+				.nombre
+					font-size: 35px
+				.profesion
+					font-size: 18px
+	footer
+		.redes-sociales
+			.contenedor
+				flex-wrap: wrap
+				padding: 20px 0
+	#info-user
+		width: 95%
+		max-width: 95%
