--- a/estilos.css
+++ b/estilos.css
@@ -358,27 +358,6 @@ footer .contacto .formulario input[type=email] {
   margin-bottom: 15px;
 }
 
-@media screen and (max-width: 800px) {
-  header .menu {
-    text-align: center;
-  }
-  .main .trabajos .contenedor-trabajos .trabajo {
-    width: 100%;
-  }
-}
-@media screen and (max-width: 560px) {
-  header .contenedor-texto .texto .nombre {
-    font-size: 35px;
-  }
-  header .contenedor-texto .texto .profesion {
-    font-size: 18px;
-  }
-  footer .redes-sociales .contenedor {
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    padding: 20px 0;
-  }
-}
 .contenedor-form {
   overflow: hidden;
 }
@@ -415,7 +394,6 @@ footer .contacto .formulario input[type=email] {
   background: var(--bg-primary);
   width: 700px;
   max-width: 70%;
-  min-width: 250px;
   position: fixed;
   top: -1000px;
   left: 50%;
@@ -468,4 +446,30 @@ footer .contacto .formulario input[type=email] {
 }
 #info-user p {
   font-family: "Poppins" sans-serif;
+}
+
+@media screen and (max-width: 800px) {
+  header .menu {
+    text-align: center;
+  }
+  .main .trabajos .contenedor-trabajos .trabajo {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 560px) {
+  header .contenedor-texto .texto .nombre {
+    font-size: 35px;
+  }
+  header .contenedor-texto .texto .profesion {
+    font-size: 18px;
+  }
+  footer .redes-sociales .contenedor {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    padding: 20px 0;
+  }
+  #info-user {
+    width: 95%;
+    max-width: 95%;
+  }
 }/*# sourceMappingURL=estilos.css.map */
