--- a/estilos.css
+++ b/estilos.css
@@ -112,6 +112,7 @@ header {
       align-content: center;
 }
 .contenedor-texto .texto {
+  background: rgba(0, 0, 0, 0.3254901961);
   border: 2px solid rgba(255, 255, 255, 0.5);
   border-radius: 3px;
   display: inline-block;
