--- a/estilos.sass
+++ b/estilos.sass
@@ -78,6 +78,7 @@ header
 	justify-content: center
 	align-content: center
 	.texto
+		background: #00000053
 		border: 2px solid rgba(255,255,255,.5)
 		border-radius: 3px
 		display: inline-block
